--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "style-loader": "^3.3.2",
     "webpack": "^5.79.0",
     "webpack-cli": "^5.0.1"
+  },
+  "devDependencies": {
+    "date-fns": "^2.29.3"
   }
 }
